scripts/nullaway/nullgtn/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8.txt
../nullgtn/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/builder/CaramelBuilder.java:13: error: [NullAway] initializer method does not guarantee @NonNull field caramelType (line 11) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public CaramelBuilder(int protein, int fat, int carbohydrate, int kiloCalories, int weight, int sugarContent, Caramel.CaramelType caramelType) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/builder/LollipopBuilder.java:13: error: [NullAway] initializer method does not guarantee @NonNull field flavor (line 11) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public LollipopBuilder(int protein, int fat, int carbohydrate, int kiloCalories, int weight, int sugarContent, String flavor) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/builder/ChocolateBuilder.java:12: error: [NullAway] initializer method does not guarantee @NonNull fields chocolateType (line 8), stuffingType (line 10) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ChocolateBuilder(int protein, int fat, int carbohydrate, int kiloCalories, int weight, int sugarContent, Chocolate.ChocolateType chocolateType, Chocolate.StuffingType stuffingType) {
           ^
    (see http://t.uber.com/nullaway )
3 errors
